<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AssessmentTitle"
        android:inputType="text"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"/>


    <ImageView
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editText"
        android:id="@+id/NameIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/ic_assignment_black_24dp"
        android:tint="@android:color/darker_gray"/>

    <Spinner
        android:id="@+id/assessmentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="147dp" />

</android.support.constraint.ConstraintLayout>