<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/mentorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/MentorName"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorName"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/EmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/mentorName"
        android:id="@+id/NameIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:tint="@android:color/darker_gray"/>
    <ImageView
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneNumber"
        android:id="@+id/phoneNumberIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_phone_black_24dp"
        android:tint="@android:color/darker_gray"/>

    <ImageView
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EmailAddress"
        android:id="@+id/EmailIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_email_black_24dp"
        android:tint="@android:color/darker_gray"/>

</android.support.constraint.ConstraintLayout>