<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="5">

    <include layout="@layout/toolbar"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topPanel"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3.7"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:id="@+id/assessmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="72dp"
            android:text="@string/AssessmentTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/assessmentName"
            app:layout_constraintTop_toBottomOf="@id/assessmentName"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/assessmentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/TypeLabel"
            app:layout_constraintTop_toTopOf="@+id/TypeLabel"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />


        <ImageView
            android:contentDescription="@string/class_icon"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/TitleIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_assignment_black_24dp"
            android:tint="@android:color/white"/>


    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:tint="@android:color/white"/>
        <include
            layout="@layout/bottom_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" />


    </FrameLayout>

</LinearLayout>
